# mpegh-ui-translator

./: AUTHORS.md  CMakeLists.txt  LICENSE.txt  README.md  thirdPartyLegalNotice.txt
demos/: CMakeLists.txt  json_to_xml.cpp  schema_generator.cpp  schema_validator.cpp  schema_validator_helper.cpp  schema_validator_helper.h  xml_to_json.cpp
doc/: CMakeLists.txt  mainpage.md
include/mpeghuitranslator/: mpeghuitranslator_c.h  simple.h  translator.h
json_schema/GET/: audioobject.schema.json  azimuthproperty.schema.json  contentkind.schema.json  elevationproperty.schema.json  label.schema.json  languagecode.schema.json  mutingproperty.schema.json  ngainteractivity.schema.json  preset.schema.json  presetkind.schema.json  prominenceproperty.schema.json  switchgroup.schema.json
json_schema/POST/: audioobject.schema.json  azimuthproperty.schema.json  contentkind.schema.json  elevationproperty.schema.json  label.schema.json  languagecode.schema.json  mutingproperty.schema.json  ngainteractivity.schema.json  preset.schema.json  presetkind.schema.json  prominenceproperty.schema.json  switchgroup.schema.json
src/: CMakeLists.txt  audio_scene.h  json_composer.cpp  json_parser.cpp  mpeghuitranslator.cpp  scene_changes.h  xml_composer.cpp  xml_helper.h  xml_parser.cpp
